feat: 移除豆包Cookie输入框，更新页面配色为清新主题，优化短链解析功能

--- a/project.config.json
+++ b/project.config.json
@@ -47,7 +47,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "3.13.1",
-  "appid": "wx3bd9a4090f72de42",
+  "appid": "wxa7bfadecd796991b",
   "projectname": "WaterDemo",
   "condition": {},
   "simulatorPluginLibVersion": {},
